fixed image spacingin gallery

--- a/docs/style.css
+++ b/docs/style.css
@@ -191,26 +191,33 @@ ul {
 }
 
 .masonry-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-template-rows: masonry;
-  aspect-ratio: 1 / 1;
-
-
+margin: 0 auto;
+  display: block;
+  text-align: center;    
+  column-count: auto;
+  column-width: 250px;
+  column-gap: 16px;
 }
 
 .masonry-grid img{
-  height: 300px;
-  width: auto;
-  border-radius: 5px;
+  display: block !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  float: none !important;
+  text-align: center !important;
+  max-width: 100%;
+  height: auto;
 }
 
 .grid-item {
+  display: inline-block;
   background-color: #7773ac21;
   height: 250px;
   padding: 15px;
   margin: 10px;
   border-radius: 5px;
+  text-align: center;      
+  vertical-align: middle;  
 }
 
 
